# gtr

./: .gitignore  Cargo.toml  Readme.md
src/: config.rs  export_settings.rs  exporter.rs  git.rs  git_interface.rs  git_readme.md  gti.rs  gtr.rs  lib.rs  main.rs  torrent.rs
src/config/: branches.rs  config_file.rs  mod.rs
src/transports/: Readme.md  default.rs  mod.rs  torrent.rs
src/utils/: error.rs
