[package]
name = "gtr"
version = "0.0.1"
edition = "2021"
author = "dzdidi"
about = "decentralized colaborative change management system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
# command line parsing utility
clap = { version = "4.0", features = ["cargo"] }
# async
# TODO: check what exactly is needed
tokio = { version = "1", features = ["full"] }

# TODO: feature flags for different transports
# torrent
# holepunch
# scuttlebutt
# gnunet
#
# bittorrent dht infrastructure dependencies
bip_dht = "0.6.0"
bip_handshake = "0.7.1"
bip_util = "0.5.0"
