[package]
name = "gtr"
version = "0.0.1"
edition = "2021"
author = "dzdidi"
about = "decentralized colaborative change management system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
# command line parsing utility
clap = { version = "4.0", features = ["cargo"] }
# async
# TODO: check what exactly is needed
tokio = { version = "1", features = ["full"] }

# toml parser
toml = { version = "0.5.3" }
# serialize/deserialize
serde = { version = "1.0", features = ["derive"] }
# bittorrent dht infrastructure dependencies
bip_dht = { version = "0.6.0", optional = true }
bip_handshake = { version = "0.7.1", optional = true }
bip_util = { version = "0.5.0", optional = true }

[features]
torrent = ["dep:bip_dht", "dep:bip_handshake", "dep:bip_util"]
# holepunch
# scuttlebutt
# gnunet
